Fixed FSIM controls not being hidden upon the first click of the image. Fixed image dropdown reloading every time an image was selected for FSIM. Fixed btnPreviousImage being overlapped by image dropdown.

--- a/SocialMedia/wwwroot/css/FullsizeImageModal.css
+++ b/SocialMedia/wwwroot/css/FullsizeImageModal.css
@@ -50,11 +50,11 @@
 }
 
 #btnFullSizePrevious {
-    left: 5%;
+    left: 22%;
 }
 
 #btnFullSizeNext {
-    right: 5%;
+    right: 22%;
 }
 
 #imageCount {
